tests/neg/i6059.scala
def I0(I1: Int ) = I1
val I1 = I0(I0 i2  // error
) => true